force-app/main/default/objects/Ticket_Tier__c/Ticket_Tier__c.object-meta.xml
<CustomObject>
    <label>Ticket Tier</label>
    <nameField>
        <label>Ticket Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>