force-app/main/default/objects/Ticket_Tier__c/fields/Held_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Held_Quantity__c</fullName>
    <label>Held Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>