force-app/main/default/objects/Ticket_Tier__c/fields/Public_Available__c.field-meta.xml
<CustomField>
    <fullName>Public_Available__c</fullName>
    <formula>Quantity_Available__c - Held_Quantity__c - Tickets_Sold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>