force-app/main/default/objects/Ticket_Tier__c/fields/Sahra_Event__c.field-meta.xml
<CustomField>
    <fullName>Sahra_Event__c</fullName>
    <label>Sahra Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Ticket Tiers</relationshipLabel>
    <relationshipName>Ticket_Tiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>