force-app/main/default/objects/Ticket_Tier__c/fields/Sales_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_End_Date__c</fullName>
    <label>Sales End Date</label>
    <type>Date</type>
</CustomField>