force-app/main/default/objects/Ticket_Tier__c/fields/Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Start_Date__c</fullName>
    <label>Sales Start Date</label>
    <type>Date</type>
</CustomField>