force-app/main/default/objects/Ticket_Tier__c/fields/Tickets_Sold__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Sold__c</fullName>
    <label>Tickets Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>