force-app/main/default/objects/Ticket_Tier__c/fields/Tier_Description__c.field-meta.xml
<CustomField>
    <fullName>Tier_Description__c</fullName>
    <label>Tier Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>