force-app/main/default/objects/Ticket_Tier__c/validationRules/Held_Quantity_Max_5_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Held_Quantity_Max_5_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>Held_Quantity__c &gt; (Quantity_Available__c * 0.05)</errorConditionFormula>
    <errorMessage>Held Quantity cannot exceed 5% of Quantity Available.</errorMessage>
</ValidationRule>