force-app/main/default/objects/Ticket_Tier__c/validationRules/Price_Locked_After_Sale.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Locked_After_Sale</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  Tickets_Sold__c &gt; 0,
  ISCHANGED(Price__c)
)</errorConditionFormula>
    <errorMessage>Price cannot be edited once tickets have been sold. Close this tier and create a new one for the new pricing.</errorMessage>
</ValidationRule>