force-app/main/default/objects/Ticket_Tier__c/validationRules/Sales_Dates_Within_Event_Window.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Dates_Within_Event_Window</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  Sales_Start_Date__c &lt;  Sahra_Event__r.Sales_Open_Date__c ,
  Sales_End_Date__c &gt;  Sahra_Event__r.Sales_Close_Date__c ,
  Sales_Start_Date__c &gt;= Sales_End_Date__c
)</errorConditionFormula>
    <errorMessage>Tier Sales Start and End Dates must fall within the parent Event&apos;s sales window, and Start must be before End.</errorMessage>
</ValidationRule>